# CS3353-Project4

./: 10_0.txt  CMakeLists.txt  GaussElim.cpp  GaussElim.h  GaussSeidel.cpp  GaussSeidel.h  Jacobi.cpp  Jacobi.h  README.md  Solver.cpp  Solver.h  input.txt  instruction.html  instruction.txt  interface.py  main.cpp  matGenerator.py  ode_2nd.py  requirements.txt  solverInterface.cpp  solverInterface.h  solvers.py
.github/workflows/: build.yaml
demo/: interface.ipynb  matGenerator.ipynb  ode_2nd.ipynb  ode_2nd_demo.ipynb  solvers.ipynb  solvers_demo.ipynb
demo/.ipynb_checkpoints/: interface-checkpoint.ipynb  matGenerator-checkpoint.ipynb  ode_2nd-checkpoint.ipynb  solvers-checkpoint.ipynb
matrices/: 100_1.txt  125_0.txt  125_1.txt  15_0.txt  175_0.txt  200_0.txt  200_1.txt  20_0.txt  20_1.txt  250_0.txt  250_1.txt  4_0.txt  5_0.txt  6_0.txt  6_1.txt  75_0.txt  7_0.txt  8_1.txt  9_1.txt
matrices0/: 100_0.txt  150_0.txt  225_0.txt  25_0.txt  30_0.txt  3_0.txt  50_0.txt  8_0.txt  9_0.txt
matrices1/: 10_1.txt  150_1.txt  175_1.txt  225_1.txt  30_1.txt  4_1.txt  50_1.txt  5_1.txt  75_1.txt  7_1.txt
small/: 15_1.txt  25_1.txt  3_1.txt
